More HTML updates with help from Tim. Updated GI logo svg (know how to edit SVGs now)

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <header>
     <div class="headerLogo">
         <a href="https://github.com/MatthewMercado/Genshin-Impact-Team-Maker">
-            <img src="./app_assets/Genshin-Impact-logo.png" alt="Genshin Impact Logo">
+            <img src="./app_assets/Genshin-Impact-logo.svg" alt="Genshin Impact Logo">
         </a>
     </div>
     <div class="socialMedia">
@@ -47,13 +47,17 @@
 <div class="teamContainer">
     <div class="characterContainer" id="characterContainer">
         <div class="charContainer" data-position="first">
-            <div class="character">
-                <div class="charImg">
+            <!-- Add logic for charContainer, first, to 50% spawn Aether or Lumine
                 <div id="lumineStartup">
                     <img src="./character_assets/cards/Lumine_c.png" data-char="Lumine" data-position="first">
                 </div>
                 <div id="aetherStartup">
                     <img src="./character_assets/cards/Aether_c.png" data-char="Aether" data-position="first">
+                </div> -->
+            <div class="character">
+                <div class="charImg">
+                    <img src="./character_assets/cards/Lumine_c.png" data-char="Lumine"
+                    data-position="first">
                 </div>
                     <div class="arrows">
                         <div class="change">
